traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var a=getMondeHauteur()
  var b=getMondeLargeur()
	var cpt=0
  var y=0
  while (getX()!=a && getY!=b){
    for (k<-0 to a){
      ecritMessage(cpt)
      setPosition(k,y)
      cpt+=1
    }
    y=y+1
  }

}
